--- a/Server/Views/content/documents.ejs
+++ b/Server/Views/content/documents.ejs
@@ -1,3 +1,51 @@
-<div class="container">
-    <h1>Your Documents are listed below: </h1>
-  </div>
+  
+<!-- Welcome Message -->
+
+<main class="container">
+    <br>
+     </div>
+     <div class="row">
+        <div class="col">
+          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
+          <hr class="my-4">
+        </div>
+     </div>
+
+     <!-- Government ID's Bar-->
+<strong><p><li class="list-group-item">Government ID's</li></p></strong>
+
+
+<ul  class="image-group">
+    <div class="col">
+
+          <strong><p>Driving Licence</p></strong>
+
+        <div class="col1" class="net-image">
+            <img src="Assets/images/driving-licence-small.png" id="Driving_Licence_Image" alt="Driving Licence Image">
+            <a href="Assets/images/driving-licence.jpg"><br>Large Image</a><br><br>
+        </div><br>
+
+
+          <strong><p>Health Card</p></strong>
+
+         <div class="col1">
+            <img src="Assets/images/ontario-healthcard-small.png" id="Ontario_Healthcard"  alt="Ontario HealthCard Image">
+            <a href="Assets/images/ontario-healthcard.jpg"><br>Large Image</a><br><br>   
+         </div><br>
+
+
+          <strong><p>Health Card</p></strong>
+
+         <div class="col1">
+            <img src="Assets/images/ontario-id-small.png" id="Ontario_Id_image"  alt="Ontario ID Image">
+            <a href="Assets/images/ontario-id.jpg"><br>Large Image</a><br><br>      
+         </div><br>
+
+          <strong><p>Passport</p></strong>
+
+         <div class="col1">
+            <img src="Assets/images/passport-canada-small.jpg" id="Passport_Canada_image"  alt="Passport Canada Image">
+            <a href="Assets/images/passport-canada.jpg"><br>Large Image</a><br><br>      
+         </div>
+   </div>
+</ul><br> 
