--- a/Server/Views/content/home.ejs
+++ b/Server/Views/content/home.ejs
@@ -1,3 +1,35 @@
-<div class="container">
-    <h1>Welcome to I-Wallet's Home page</h1>
-  </div>
+  
+<!-- Welcome Message -->
+
+<main class="container">
+    <br>
+     </div>
+     <div class="row">
+        <div class="col">
+          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
+          <hr class="my-4">
+        </div>
+     </div>
+
+  
+  
+        <div class="wrapper">
+
+        <p><form method="get" action="/Document">
+            <button type="submit" class="btn btn-warning btn-lg btn-block" style="width: 30%" >Document</button>
+        </form></p>
+
+        <p><form method="get" action="/notification" >
+            <button type="submit" class="btn btn-warning btn-lg btn-block" style="width: 30%" >Notification</button>
+        </form></p>
+
+        <p><form method="get" action="/profile" >
+            <button type="submit" class="btn btn-warning btn-lg btn-block" style="width: 30%">User Profile</button>
+        </form></p>
+
+        <p><form method="get" action="/contact" >
+            <button type="submit" class="btn btn-warning btn-lg btn-block" style="width: 30%">Contact</button>
+        </form><p>
+
+        </div>
+
