--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -1,1 +1,15 @@
 /* your custom css goes here */
+
+.wrapper {
+    text-align: center;
+}
+
+.image-group { text-align: center; }
+.image-group { display:inline-table; }
+.image-group { display:inline; }
+
+/*Centre the column in project page*/
+.col1 { transition: transform .2s;  margin: 0 auto;}
+
+
+
