--- a/Server/Views/content/contact.ejs
+++ b/Server/Views/content/contact.ejs
@@ -1,3 +1,43 @@
-<div class="container">
-    <h1>Contact Us</h1>
-  </div>
+  
+<!-- Welcome Message -->
+
+<main class="container">
+    <br>
+     </div>
+     <div class="row">
+        <div class="col">
+          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
+          <hr class="my-4">
+        </div>
+     </div>
+
+  <form >
+      <div class="row">
+        <div class="col">
+          <input type="text" id="firstName" class="form-control" placeholder="First Name"> <!--Here user can input first name-->
+        </div>
+        <div class="col" class="from-group">
+          <input type="text"  id="lastName" class="form-control" placeholder="Last Name">  <!--Here user can input last name-->
+        </div> 
+      </div><br> 
+      
+      <div class="form-group">
+        <input type="contact_number" id="contactNumber" class="form-control" placeholder="Contact Number"> <!--Here user can input contact number-->
+      </div><br>
+      
+      <div class="form-group">
+        <input type="email"  id="emailAddress" class="form-control" placeholder="Email Address"> <!--Here user can input email address-->
+      </div><br>
+      
+      <div class="form-group">
+        <textarea name="message" id="message"  class="form-control" placeholder="Type your message here" cols="30" rows="8"></textarea> <!--Here user can input Text Area-->
+      </div><br>
+
+      
+        <div class="text-first mt-6">
+                  <button id="loginButton" type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Login</button>
+                  <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo"></i> Cancel</button>
+        </div>
+    </form><br>
+
+    
