--- a/Server/Views/content/login.ejs
+++ b/Server/Views/content/login.ejs
@@ -20,7 +20,7 @@
                     <input type="text" class="form-control" id="username" name="username"  required
                     value="" placeholder="Enter your username">
                   </div>
-                </div>
+                </div><br>
 
                 <div class="form-group">
                   <div class="input-group">
@@ -33,7 +33,7 @@
                   </div>
                  
                 </div>                                        
-                <div class="text-end mt-2">
+                <div class="text-first mt-2">
                   <button id="loginButton" type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Login</button>
                   <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo"></i> Cancel</button>
                 </div>
