--- a/Server/Views/content/notification.ejs
+++ b/Server/Views/content/notification.ejs
@@ -1,3 +1,12 @@
-<div class="container">
-    <h1>Notifications</h1>
-  </div>
+  
+<!-- Welcome Message -->
+
+<main class="container">
+    <br>
+     </div>
+     <div class="row">
+        <div class="col">
+          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
+          <hr class="my-4">
+        </div>
+     </div>
