--- a/Server/Views/content/home.ejs
+++ b/Server/Views/content/home.ejs
@@ -2,15 +2,19 @@
 <!-- Welcome Message -->
 
 <main class="container">
-    <br>
-     </div>
-     <div class="row">
-        <div class="col">
-          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
-          <hr class="my-4">
-        </div>
-     </div>
-
+    <div class="row">
+       <div class="col">
+          <div class="jumbotron">
+             <h1 class="display-7"><%= title %></h1>
+          </div>
+       </div>
+    </div>
+       <div class="row">
+         <div class="col">
+           <p class="display-10">Welcome to <%= title %> </p>
+           <hr class="my-4">
+         </div>
+      </div>
   
   
         <div class="wrapper">
@@ -28,7 +32,7 @@
         </form></p>
 
         <p><form method="get" action="/contact" >
-            <button type="submit" class="btn btn-warning btn-lg btn-block" style="width: 30%">Contact</button>
+            <button type="submit" class="btn btn-warning btn-lg btn-block" style="width: 30%">Customer Care</button>
         </form><p>
 
         </div>
