--- a/Server/Views/content/notification.ejs
+++ b/Server/Views/content/notification.ejs
@@ -1,12 +1,20 @@
   
 <!-- Welcome Message -->
-
 <main class="container">
-    <br>
-     </div>
-     <div class="row">
-        <div class="col">
-          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
-          <hr class="my-4">
-        </div>
-     </div>
+    <div class="row">
+       <div class="col">
+          <div class="jumbotron">
+             <h1 class="display-7"><%= title %></h1>
+          </div>
+       </div>
+    </div>
+       <div class="row">
+         <div class="col">
+           <p class="display-10">Welcome to <%= title %> </p>
+           <hr class="my-4">
+         </div>
+      </div>
+
+                <strong><p><li class="list-group-item">July 27,2021</li></p></strong>
+                <ul> </ul>
+
