--- a/Server/Views/index.ejs
+++ b/Server/Views/index.ejs
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
   <link rel="stylesheet" href="/Content/app.css">
 </head>
+<div class="background">
 <body>
   <!-- Navigation Section -->
   <header>
@@ -31,4 +32,5 @@
   <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/Scripts/app.js"></script>
 </body>
+</div>
 </html>
