--- a/Client/Content/app.css
+++ b/Client/Content/app.css
@@ -2,6 +2,8 @@
 
 .wrapper {
     text-align: center;
+    
+
 }
 
 .image-group { text-align: center; }
@@ -12,4 +14,39 @@
 .col1 { transition: transform .2s;  margin: 0 auto;}
 
 
+
+
+   
+.nav-item{
+    background-color: #674d03;
+    color: white;
+
+}
+
+.navbar{
+    background-color: #674d03;
+
+}
+
+.container-fluid{
+    background-color: #674d03;
+    color: white;
+
+}
+
+body{
+    background-color: #fff3cd;
+
+}
+
+.nav-link{
+    color: white;
+}
+
+.list-group-item{
+    background-color: #ffe69c;
+
+
+
+}
 
