--- a/Server/Views/components/footer.ejs
+++ b/Server/Views/components/footer.ejs
@@ -1,4 +1,4 @@
- <nav class="navbar fixed-bottom navbar-light bg-light">
+ <nav class="navbar fixed-bottom">
     <div class="container-fluid">
       <h6>&copy; Copyright 2021.</h6>
     </div>
