--- a/Server/Views/components/header.ejs
+++ b/Server/Views/components/header.ejs
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg ">
 
 <ul class="nav nav-pills">
   <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="/home">Home</a>
+    <a class="nav-link" aria-current="page" href="/home">Home</a>
   </li>
   <li class="nav-item dropdown">
     <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
     <ul class="dropdown-menu">
-      <li><a class="dropdown-item" href="/document"> Document </a></li>
+      <li><a class="dropdown-item" href="/document" > Document </a></li>
       <li><a class="dropdown-item" href="/notification"> Notification </a></li>
       <li><a class="dropdown-item" href="/profile"> User Profile </a></li>
       <li><a class="dropdown-item" href="/contact"> Customer Care </a></li>
