--- a/Server/Views/content/documents.ejs
+++ b/Server/Views/content/documents.ejs
@@ -2,14 +2,20 @@
 <!-- Welcome Message -->
 
 <main class="container">
-    <br>
-     </div>
-     <div class="row">
-        <div class="col">
-          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
-          <hr class="my-4">
-        </div>
-     </div>
+    <div class="row">
+       <div class="col">
+          <div class="jumbotron">
+             <h1 class="display-7"><%= title %></h1>
+          </div>
+       </div>
+    </div>
+       <div class="row">
+         <div class="col">
+           <p class="display-10">Welcome to <%= title %> </p>
+           <hr class="my-4">
+         </div>
+      </div>
+
 
      <!-- Government ID's Bar-->
 <strong><p><li class="list-group-item">Government ID's</li></p></strong>
@@ -18,7 +24,7 @@
 <ul  class="image-group">
     <div class="col">
 
-          <strong><p>Driving Licence</p></strong>
+          <strong><p><li class="list-group-item">Driving Licence</li></p></strong>
 
         <div class="col1" class="net-image">
             <img src="Assets/images/driving-licence-small.png" id="Driving_Licence_Image" alt="Driving Licence Image">
@@ -26,7 +32,7 @@
         </div><br>
 
 
-          <strong><p>Health Card</p></strong>
+          <strong><p><li class="list-group-item">Health Card</li></p></strong>
 
          <div class="col1">
             <img src="Assets/images/ontario-healthcard-small.png" id="Ontario_Healthcard"  alt="Ontario HealthCard Image">
@@ -34,14 +40,14 @@
          </div><br>
 
 
-          <strong><p>Health Card</p></strong>
+          <strong><p><li class="list-group-item">Ontario ID</li></p></strong>
 
          <div class="col1">
             <img src="Assets/images/ontario-id-small.png" id="Ontario_Id_image"  alt="Ontario ID Image">
             <a href="Assets/images/ontario-id.jpg"><br>Large Image</a><br><br>      
          </div><br>
 
-          <strong><p>Passport</p></strong>
+          <strong><p><li class="list-group-item">Passport</li></p></strong>
 
          <div class="col1">
             <img src="Assets/images/passport-canada-small.jpg" id="Passport_Canada_image"  alt="Passport Canada Image">
