--- a/Server/Views/content/userprofile.ejs
+++ b/Server/Views/content/userprofile.ejs
@@ -1,27 +1,47 @@
   
 <!-- Welcome Message -->
 
-<main class="container">
-    <br>
-     </div>
-     <div class="row">
-        <div class="col">
-          <p class="display-10"><strong> Welcome to <%= title %> Page </p></strong>
-          <hr class="my-4">
-        </div>
-     </div>
 
-        <form class="form" method="POST">
-                    <p class="label">Name <strong class="req">*</strong></p>
-                    <input class="textbox" type="text" name="name" placeholder="John Doe">
-                    <p class="label">Email <strong class="req">*</strong></p>
-                    <input class="textbox" type="email" name="email" placeholder="john.doe@example.com">
-                    <p class="label">Current Password <strong class="req">*</strong></p>
-                    <input class="textbox" type="password" name="cpassword" placeholder="Password"/>
-                    <p class="label">New Password (Leave blank if not to be changed)</p>
-                    <input class="textbox" type="password" name="npassword" placeholder="Confirm Password"/>
-                <fieldset>
-                    <button input class="btn" type="submit" value="Update Account"/>
-             
-                </fieldset>
-            </form>
+<main class="container">
+    <div class="row">
+       <div class="col">
+          <div class="jumbotron">
+             <h1 class="display-7"><%= title %></h1>
+          </div>
+       </div>
+    </div>
+       <div class="row">
+         <div class="col">
+           <p class="display-10">Welcome to <%= title %> </p>
+           <hr class="my-4">
+         </div>
+      </div>
+  
+
+      <form >
+      <div class="row">
+        <div class="col">
+          <input type="text" id="firstName" class="form-control" placeholder="Name"> <!--Here user can input first name-->
+        </div>
+        <div class="col" class="from-group">
+          <input type="text"  id="lastName" class="form-control" placeholder="Email">  <!--Here user can input last name-->
+        </div> 
+      </div><br> 
+
+           <div class="row">
+        <div class="col">
+          <input type="text" id="firstName" class="form-control" placeholder="Current Password"> <!--Here user can input first name-->
+        </div>
+        <div class="col" class="from-group">
+          <input type="text"  id="lastName" class="form-control" placeholder="New Password">  <!--Here user can input last name-->
+        </div> 
+      </div><br> 
+      
+      
+
+      
+        <div class="text-first mt-6">
+                  <button id="loginButton" type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i> Update</button>
+                  <button id="cancelButton" type="reset" class="btn btn-warning"><i class="fas fa-undo"></i> Cancel</button>
+        </div>
+    </form><br>
